Workaround for failed height calc on page load of fixed scrollbar ship list
* Fix abyssal icon bg of natsuiro activity

--- a/src/pages/devtools/themes/natsuiro/natsuiro.css
+++ b/src/pages/devtools/themes/natsuiro/natsuiro.css
@@ -2276,6 +2276,7 @@ ABYSS FLEET
 .module.activity .activity_gunfit .landing .shipIcon img {
 	width:18px;
 	height:18px;
+	border-radius:50%;
 	margin-top:1px;
 	vertical-align:top;
 }
